# java-spbpu-homework

./: .gitignore  CMakeLists.txt  README.md
annotations/: AnnotationsDemo.java  InvokeTimes.java  TestClass.java
strategy/: FlyingStrategy.java  Hero.java  HorseRidingStrategy.java  MovementStrategy.java  StrategyPatternDemo.java  WalkingStrategy.java
stream/: StreamAPIExamples.java
translator/: FileReadException.java  InvalidFileFormatException.java  Translator.java
translator/assets/: dictionary.csv
